# Datastore.shared

./: .gitignore  CHANGELOG.md  Makefile  PRICE_PARQUET_V3_SPEC.md  README.md  TODO_path_refactoring.md  conftest.py  pyproject.toml
.github/workflows/: publish.yml
TODOs/done/: 20260411_v0.2.1_BINANCE_S3_INTEGRATION_AND_TESTING.md  README_MODULARIZATION.md
src/groai_fi_datastore_shared/: __init__.py
src/groai_fi_datastore_shared/Binance/: BacktestOrder.py  BacktestOrderData.py  BaseBacktestOrder.py  BinanceClient.py  BinanceMarketData.py  BinanceMarketDataDownloader.py  BinanceOrder.py  BinanceOrderData.py  DataReadWrite.py  OrderBook.py  README.md  __init__.py  config.py  email_utils.py  enums.py  helper.py  schema.py  utils.py
src/groai_fi_datastore_shared/Binance/cache/: BinanceTradeFee.pkl
src/groai_fi_datastore_shared/Binance/cli/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  auto_update_prices.py  auto_update_prices_s3.py  backfill_fix_s3.py  download_price_binance.py  download_price_binance_s3.py  list_symbols.py  list_symbols_s3.py  merge_parquet_prices.py  merge_parquet_prices_s3.py  remove_symbol.py  remove_symbol_s3.py  s3_utils.py  shared.py
tests/Binance/: test_download_and_merge.py  test_get_klines.py  test_get_last_price_date.py  test_list_and_remove_symbols.py  test_s3_scripts.py  test_save_price_parquet.py
