[project]
name = "groai-fi-datastore-shared"
version = "0.2.1"
description = "Shared datastore utilities for GroAI.fi — Binance market data downloading, parquet storage, and trading infrastructure"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Hamilton", email = "hamilton@aiart.io" }
]
requires-python = ">=3.9"
keywords = ["binance", "crypto", "market-data", "parquet", "trading", "datastore"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "python-binance>=1.0.34",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "dask[dataframe]>=2023.1.0",
    "pyarrow>=10.0.0",
    "pytz>=2022.1",
    "python-dateutil>=2.8.2",
    "duckdb>=0.10.0",
    "boto3>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
binance-download-price    = "groai_fi_datastore_shared.Binance.cli.download_price_binance:run"
binance-merge-parquet     = "groai_fi_datastore_shared.Binance.cli.merge_parquet_prices:run"
binance-auto-update       = "groai_fi_datastore_shared.Binance.cli.auto_update_prices:main"
binance-list-symbols      = "groai_fi_datastore_shared.Binance.cli.list_symbols:run"
binance-remove-symbol     = "groai_fi_datastore_shared.Binance.cli.remove_symbol:run"
binance-download-price-s3 = "groai_fi_datastore_shared.Binance.cli.download_price_binance_s3:run"
binance-merge-parquet-s3  = "groai_fi_datastore_shared.Binance.cli.merge_parquet_prices_s3:run"
binance-auto-update-s3    = "groai_fi_datastore_shared.Binance.cli.auto_update_prices_s3:main"
binance-list-symbols-s3   = "groai_fi_datastore_shared.Binance.cli.list_symbols_s3:run"
binance-remove-symbol-s3  = "groai_fi_datastore_shared.Binance.cli.remove_symbol_s3:run"

[project.urls]
Homepage   = "https://github.com/groai-fi/datastore.shared"
Repository = "https://github.com/groai-fi/datastore.shared"
Issues     = "https://github.com/groai-fi/datastore.shared/issues"

[build-system]
requires      = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "python-dotenv>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v"
markers   = [
    "integration: tests requiring a live, unrestricted Binance API connection or S3 credentials (skipped in CI)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
